--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,33 @@ body {
     }
 }
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 20px;
+}
+
+body {
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    font-family: sans-serif;
+    padding: 0;
+}
+
+h1 {
+    width: 100%;
+    font-size: 3rem;
+    font-style: italic;
+    text-decoration: underline;
+    word-wrap: break-word;
+}
+
+h3 {
+    font-size: 24px;
+    text-decoration: underline;
+}
+
 a {
     color: rgb(115, 115, 240);
 }
