--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,29 @@ h1 {
     width: 100%;
     font-size: 3rem;
     font-style: italic;
+    font-weight: 500;
     text-decoration: underline;
     word-wrap: break-word;
+}
+
+.hometopics {
+    font-size: 24px;
+}
+
+a {
+    color: rgb(115, 115, 240);
+}
+
+.htmlh1 {
+    color: rgb(160, 30, 30);
+}
+
+.cssh1 {
+    color: rgb(50, 50, 255);
+}
+
+.flexboxh1 {
+    color: rgb(100, 50, 0);
 }
 
 h3 {
@@ -40,9 +61,6 @@ h3 {
     text-decoration: underline;
 }
 
-a {
-    color: rgb(115, 115, 240);
-}
 
 code {
     color: #e7bdd5;
