--- a/styles.css
+++ b/styles.css
@@ -13,18 +13,13 @@ body {
     }
 }
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 20px;
-}
-
 body {
     width: 100%;
     max-width: 100vw;
     overflow-x: hidden;
     font-family: sans-serif;
     padding: 0;
+    margin: 50px 60px;
 }
 
 h1 {
@@ -59,6 +54,11 @@ a {
     color: rgb(115, 115, 240);
 }
 
+.t-o-c > li{
+    font-size: 30px;
+    margin: 50px;
+}
+
 /* HTML Contents */
 .htmlh1 {
     color: rgb(160, 30, 30);
@@ -80,10 +80,6 @@ a {
 }
 
 .flexbox-intro-link {
-    margin: 0;
-}
-
-.itf-preview-strong {
     margin: 0;
 }
 
