--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@ body {
 }
 
 body {
-    width: 100%;
-    max-width: 100vw;
+    box-sizing: border-box;
     overflow-x: hidden;
     font-family: sans-serif;
     padding: 0;
@@ -52,6 +51,10 @@ h4 {
 
 a {
     color: rgb(115, 115, 240);
+}
+
+li {
+    margin-left: 20px;
 }
 
 .t-o-c > li{
