--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,20 @@ body {
     overflow-x: hidden;
     font-family: sans-serif;
     padding: 0;
-    margin: 50px 60px;
+    margin: 50px 200px;
 }
 
 h1, .title {
     width: 100%;
-    font-size: 3rem;
+    font-size: 60px;
     font-style: italic;
-    font-weight: 500;
+    font-weight: 900;
     text-decoration: underline;
     word-wrap: break-word;
 }
 
 h2, .header {
+    font-size: 36px;
     font-weight: 900;
     text-decoration: underline;
 }
