--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h2, .header {
     text-decoration: underline;
 }
 
-h3 {
+h3, .subheader {
     font-size: 24px;
     text-decoration: underline;
 }
@@ -63,6 +63,7 @@ li {
     margin: 50px;
     list-style-type: none;
 }
+
 
 /* HTML Contents */
 .htmlh1 {
