--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     margin: 50px 200px;
 }
 
-h1, .title {
+h1, .topic {
     width: 100%;
     font-size: 60px;
     font-style: italic;
@@ -30,7 +30,7 @@ h1, .title {
     word-wrap: break-word;
 }
 
-h2, .header {
+h2, .title {
     font-size: 36px;
     font-weight: 900;
     text-decoration: underline;
@@ -66,13 +66,13 @@ li {
 
 
 /* HTML Contents */
-.htmlh1 {
-    color: rgb(160, 30, 30);
+.htmlcolor {
+    color: #e34C26;
 }
 
 /* CSS Contents */
-.cssh1 {
-    color: rgb(50, 50, 255);
+.csscolor {
+    color: #663399;
 }
 
 .h2-link-alignment {
@@ -81,8 +81,8 @@ li {
 }
 
 /*Flexbox Contents */
-.flexboxh1 {
-    color: rgb(100, 50, 0);
+.flexboxcolor {
+    color: rgb(107, 75, 42);
 }
 
 .answer {
@@ -103,6 +103,10 @@ code {
 }
 
 /* JavaScript Contents */
+
+.javascriptcolor {
+    color: #f1e05a;
+}
 
 .vao-heading {
     font-size: 36px;
