--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     overflow-x: hidden;
     font-family: sans-serif;
     padding: 0;
-    margin: 50px 200px;
+    margin: 50px 1000px 50px 250px;
 }
 
 h1, .topic {
